--- a/Optizoom/Optizoom.csproj
+++ b/Optizoom/Optizoom.csproj
@@ -1,61 +1,79 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <ProjectGuid>{C88EC514-5D98-4824-8C66-5ED1888C764B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Optizoom</RootNamespace>
-    <AssemblyTitle>Optizoom</AssemblyTitle>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <TargetFramework>net472</TargetFramework>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <LangVersion>preview</LangVersion>
+	<PropertyGroup>
+		<AppName>Resonite</AppName>
+		<ModLoaderShort>rml</ModLoaderShort>
 
-    <AppName>Resonite</AppName>
-    <ModLoaderShort>rml</ModLoaderShort>
+		<Product>Optizoom</Product>
+		<Version>2.1.0</Version>
 
-    <AppPath>$(MSBuildThisFileDirectory)$(AppName)</AppPath>
-    <AppPath Condition="Exists('F:\Windows\')">F:\Windows\</AppPath>
-    <AppPath Condition="Exists('E:\SteamLibrary\steamapps\common\$(AppName)')">E:\SteamLibrary\steamapps\common\$(AppName)\</AppPath>
-    <AppPath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\$(AppName)\')">C:\Program Files (x86)\Steam\steamapps\common\$(AppName)\</AppPath>
+		<Company>badhaloninja</Company>
+		<Copyright>Copyright © $(Company) 2024</Copyright>
 
-    <AppData Condition="Exists('$(AppPath)$(AppName)_Data')">$(AppPath)$(AppName)_Data\Managed\</AppData>
+		<Authors>$(Company)</Authors>
+		<AssemblyTitle>$(Product)</AssemblyTitle>
+		<AssemblyName>$(Product)</AssemblyName>
 
-    <AlternateDataPath>$(AppPath)\Alt\</AlternateDataPath>
-    <AlternateDataPath Condition="Exists('$(AppPath)')">$(AppPath)_altData</AlternateDataPath>
+		<RootNamespace>Optizoom</RootNamespace>
+		<ProjectGuid>{C88EC514-5D98-4824-8C66-5ED1888C764B}</ProjectGuid>
+	</PropertyGroup>
 
-    <CopyLocal>false</CopyLocal>
-    <CopyToMods Condition="'$(CopyToMods)'==''">true</CopyToMods>
-    <DebugSymbols Condition="'$(Configuration)'=='Release'">false</DebugSymbols>
-    <DebugType Condition="'$(Configuration)'=='Release'">None</DebugType>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="..\README.md" Link="README.md" />
-    <None Include="Properties\launchSettings.json" />
-  </ItemGroup>
+	<PropertyGroup>
+		<OutputType>Library</OutputType>
+		<AppDesignerFolder>Properties</AppDesignerFolder>
+		<TargetFramework>net472</TargetFramework>
+		<LangVersion>preview</LangVersion>
+		<FileAlignment>512</FileAlignment>
+		<Deterministic>true</Deterministic>
+	</PropertyGroup>
+	
+	<PropertyGroup>
+		<CopyLocal>false</CopyLocal>
+		<CopyToMods Condition="'$(CopyToMods)'==''">true</CopyToMods>
+		<DebugSymbols Condition="'$(Configuration)'=='Release'">false</DebugSymbols>
+		<DebugType Condition="'$(Configuration)'=='Release'">None</DebugType>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<None Include="Properties\launchSettings.json" />
+		<None Include="..\README.md" Link="README.md" />
+		<None Include="..\LICENSE" Link="License" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="FrooxEngine">
-      <HintPath>$(AppData)FrooxEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="Elements.Core">
-      <HintPath>$(AppData)Elements.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Elements.Assets">
-      <HintPath>$(AppData)Elements.Assets.dll</HintPath>
-    </Reference>
-    <Reference Include="HarmonyLib">
-      <HintPath>$(AppPath)$(ModLoaderShort)_libs\0Harmony.dll</HintPath>
-      <HintPath Condition="Exists('$(AppPath)0Harmony.dll')">$(AppPath)0Harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="$(AppName)ModLoader">
-      <HintPath>$(AppPath)$(AppName)ModLoader.dll</HintPath>
-      <HintPath>$(AppPath)Libraries\$(AppName)ModLoader.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(CopyToMods)'=='true'">
-    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AppPath)$(ModLoaderShort)_mods" />
-    <Message Text="Copied $(TargetFileName) to $(AppPath)$(ModLoaderShort)_mods" Importance="high" />
-  </Target>
+	<PropertyGroup>
+		<AppPath>$(MSBuildThisFileDirectory)$(AppName)</AppPath>
+		<AppPath Condition="Exists('E:\Programs\Steam\steamapps\common\$(AppName)')">E:\Programs\Steam\steamapps\common\$(AppName)\</AppPath>
+		<AppPath Condition="Exists('E:\SteamLibrary\steamapps\common\$(AppName)')">E:\SteamLibrary\steamapps\common\$(AppName)\</AppPath>
+		<AppPath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/$(AppName)/')">$(HOME)/.steam/steam/steamapps/common/$(AppName)/</AppPath>
+		<AppPath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\$(AppName)\')">C:\Program Files (x86)\Steam\steamapps\common\$(AppName)\</AppPath>
+
+		<AppData Condition="Exists('$(AppPath)$(AppName)_Data')">$(AppPath)$(AppName)_Data\Managed\</AppData>
+
+		<AlternateDataPath>$(AppPath)\Alt\</AlternateDataPath>
+		<AlternateDataPath Condition="Exists('$(AppPath)')">$(AppPath)_altData</AlternateDataPath>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Reference Include="FrooxEngine">
+			<HintPath>$(AppData)FrooxEngine.dll</HintPath>
+		</Reference>
+		<Reference Include="Elements.Core">
+			<HintPath>$(AppData)Elements.Core.dll</HintPath>
+		</Reference>
+		<Reference Include="Elements.Assets">
+			<HintPath>$(AppData)Elements.Assets.dll</HintPath>
+		</Reference>
+		<Reference Include="HarmonyLib">
+			<HintPath>$(AppPath)$(ModLoaderShort)_libs\0Harmony.dll</HintPath>
+			<HintPath Condition="Exists('$(AppPath)0Harmony.dll')">$(AppPath)0Harmony.dll</HintPath>
+		</Reference>
+		<Reference Include="$(AppName)ModLoader">
+			<HintPath>$(AppPath)$(AppName)ModLoader.dll</HintPath>
+			<HintPath>$(AppPath)Libraries\$(AppName)ModLoader.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+	
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(CopyToMods)'=='true'">
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AppPath)$(ModLoaderShort)_mods" />
+		<Message Text="Copied $(TargetFileName) to $(AppPath)$(ModLoaderShort)_mods" Importance="high" />
+	</Target>
 </Project>
